# tempus

./: .gitignore  .mise.toml  Makefile  README.md  README_DE.md  install.sh  mise.toml  pyproject.toml  run.sh
.github/: copilot-instructions.md
.streamlit/: config.toml
data/: sample_data.csv
scripts/: generate_large_csv.py
src/tempus/: app.py  desktop_app.py
src/tempus/desktop/: __init__.py  main_window.py  theme.py
src/tempus/desktop/model/: __init__.py  data_model.py
src/tempus/desktop/widgets/: __init__.py  datetime_range_dialog.py  layer_manager.py  plot_widget.py
src/tempus/utils/: __init__.py  config_manager.py  data_loader.py  plotter.py
