[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tempus"
version = "0.1.0"
description = "A Python GUI application"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "pandas>=2.0.0",
    "pyarrow",
    "streamlit",
    "plotly",
]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "ty>=0.0.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/tempus"]

[tool.ruff]
line-length = 120
