[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tempus"
version = "0.1.0"
description = "A Python GUI application for visualizing large time-series datasets"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "pandas>=2.0.0",
    "pyarrow",
    "PyQt6>=6.6.0",
    "pyqtgraph>=0.13.0",
    "pyqtdarktheme>=2.1.0",
    "numpy>=1.24.0",
]

[project.scripts]
tempus-desktop = "tempus.desktop_app:main"

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "ty>=0.0.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/tempus"]

[tool.ruff]
line-length = 120
