[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tempus"
version = "0.1.0"
description = "A Python GUI application for visualizing large time-series datasets"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "pandas==2.3.3",
    "pyarrow==22.0.0",
    "PyQt6==6.10.1",
    "pyqtgraph==0.14.0",
    "pyqtdarktheme==2.1.0",
    "numpy==2.4.0",
]

[project.scripts]
tempus-desktop = "tempus.desktop_app:main"

[dependency-groups]
dev = [
    "ruff==0.14.10",
    "ty==0.0.5",
]

[tool.hatch.build.targets.wheel]
packages = ["src/tempus"]

[tool.ruff]
line-length = 120
